# Japan

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.ninja  debug.ninja  posix-debug.ninja  posix-release.ninja  windows-debug.ninja  windows-release.ninja
.github/workflows/: codeql-analysis.yml  main.yml  ubuntu.yml  windows.yml
include/: aabounding.h  buffer.h  dictionary.h  endianness.h  error.h  image.h  japan-aabounding.h  japan-buffer.h  japan-config.h  japan-configuration.h  japan-dictionary.h  japan-encode.h  japan-endianness.h  japan-image.h  japan-list.h  japan-matrix.h  japan-options.h  japan-sound.h  japan-status.h  japan-string.h  japan-token.h  japan-tree.h  japan-utilities.h  japan-vector.h  japan-version.h  list.h  matrix.h  options.h  sound.h  status.h  tree.h  utilities.h  vector.h
resources/: debug.ninja  posix-debug.ninja  posix-release.ninja  release.ninja  tests.ninja  windows-debug.ninja
sketches/: convert-image.c  convert-image.cr  convert-image.rb  convert-sound.c  convert-sound.cr  convert-sound.rb  japan.cr  japan.rb  resampler.c  simplex.c  sound.rb
source/: aabounding.c  annex-k.h  buffer.c  common.h  dictionary.c  encode.c  endianness.c  error.c  image-sgi.c  image.c  list.c  local.h  matrix.c  options.c  sound-au.c  sound-local.h  sound-private.h  sound-wav.c  sound.c  status.c  string.c  token.c  tree.c  utilities.c  vector.c  version.c
source/config/: arguments.c  config.c  file.c  files.c  private.h
source/configuration/: arguments.c  configuration.c  file.c  files.c  private.h
source/image/: format-sgi.c  image.c
source/sound/: format-au.c  format-wav.c  laws.c  private.h  sound.c
source/token/: encode-ascii.c  encode-utf8.c  private.h  token.c
test-suite/: dictionaries.c  lists.c  test-suite.c
tests/: akabeko-gray8-rle.sgi  akabeko-gray8-rle.sgi.data  akabeko-gray8.sgi  akabeko-graya8-rle.sgi  akabeko-graya8.sgi  akabeko-rgb8-rle.sgi  akabeko-rgb8.sgi  akabeko-rgba8-rle.sgi  akabeko-rgba8.sgi  config1.cfg  config1a.cfg  config2.cfg  configurations.c  dictionaries.c  encodes.c  images.c  lists.c  parse-test.jcfg  rockafeller.txt  strings.c  test-suite.c  test.cfg  tokenize-test.jcfg  tokens.c  uwu.txt
